# aistudy

./: .gitignore  AI 서비스 엔지니어 6기 커리큘럼.xlsx  README.md  pyproject.toml  test.py
week1/: [day2] 파이썬 기초(1).ipynb  [day3] 파이썬 기초(2).ipynb  [day4] 파이썬 기초(3).ipynb  [day5] 암호화폐 데이터 조회 프로젝트.ipynb
week2/: [day1] 파이썬기초(4).ipynb  [day2] 데이터베이스기초.ipynb  person.json  students.csv
week2/day3/: 01_basic_api.py  02_request_response.py  03_database_api.py  FastAPI_1234_호출실습.ipynb  FastAPI_강의자료.md
week2/day4/: ubuntu명령어사용법.ipynb
week2/day5/: [day5] 금융데이터_파이프라인_실습.ipynb  crypto_data.db  project.py
week2/fastapi/: 1_base_api.py  test.html
week3/day2/: 01_basic_app.py  02_components.py  03_layout.py  04_interactive.py  1_0_streamlit_개념.md  1_2_streamlit_구조와_컴포넌트.md  1_3_streamlit_UI_설계_방법.md  my_basic_app.py  my_component.py  my_layout.py
week3/day4/: (colab)이미지생성.ipynb  [day4]_huggingface_sentiment.ipynb  huggingface 실습.ipynb  텍스트_분류_실습(GLUE).ipynb
week3/day5/: requirements_sentiment.txt  sentiment_analysis_project.py  감성분석모델.ipynb  환경세팅.md
