[project]
name = "ai-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.123.8",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "pyupbit>=0.2.34",
    "sentencepiece>=0.2.1",
    "streamlit>=1.52.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
]
